# CPP_Learning

./: CMakeLists.txt  README.md
BufferMemory/: CMakeLists.txt
BufferMemory/include/: SharedMemoryWrapper.hpp
BufferMemory/src/: SharedMemoryWrapper.cpp
Data_Router_log/: CMakeLists.txt  Diagram.puml
Data_Router_log/etc/: config.json
Data_Router_log/include/: ConfigManager.hpp  FileOut.hpp  Logging.hpp  Logout.hpp  NetworkOut.hpp  TerminalOut.hpp
Data_Router_log/src/: ConfigManager.cpp  FileOut.cpp  NetworkOut.cpp  TerminalOut.cpp  logging.cpp  main.cpp
MockApp/: CMakeLists.txt  MockApp.cpp
